--- a/testify-ui/src/styles/landing.css
+++ b/testify-ui/src/styles/landing.css
@@ -19,13 +19,6 @@
 	color: #000000;
 }
 
-.switch {
-	position: relative;
-	display: inline-block;
-	width: 60px;
-	height: 34px;
-}
-
 .switch input {
 	opacity: 0;
 	width: 0;
@@ -41,15 +34,18 @@
 	bottom: 0;
 	background-color: #ccc;
 	transition: 0.4s;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 50%;
 }
 
 .slider:before {
 	position: absolute;
 	content: "";
-	height: 26px;
-	width: 26px;
-	left: 4px;
-	bottom: 4px;
+	height: 46px;
+	width: 46px;
+	left: 2px;
+	bottom: 2px;
 	background-color: white;
 	transition: 0.4s;
 }
@@ -59,7 +55,7 @@ input:checked + .slider {
 }
 
 input:checked + .slider:before {
-	transform: translateX(26px);
+	transform: translateX(50px);
 }
 
 .slider.round {
@@ -79,6 +75,35 @@ input:checked + .slider:before {
 	top: 20px;
 	right: 20px;
 	display: inline-block;
-	width: 60px;
-	height: 34px;
+	width: 100px;
+	height: 50px;
+}
+
+.sun,
+.moon {
+	position: absolute;
+	width: 50%;
+	height: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 50%;
+	transition: opacity 0.4s;
+}
+
+.sun {
+	left: 0;
+	opacity: 0;
+}
+
+.moon {
+	right: 0;
+	opacity: 1s;
+}
+
+input:checked + .slider .sun {
+	opacity: 1;
+}
+
+input:checked + .slider .moon {
+	opacity: 0;
 }
