--- a/testify-ui/src/styles/App.css
+++ b/testify-ui/src/styles/App.css
@@ -36,6 +36,7 @@
 body {
 	animation: fadeIn 1s ease-in-out forwards;
 	scroll-behavior: smooth;
+	background-color: rgb(40, 44, 52);
 }
 
 @keyframes fadeIn {
